--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
 
       <script src="js/angular.js"></script>
-      <script src="js/jsplumbtoolkit.js"></script>
+      <script src="js/jsplumbtoolkit_hacked.js"></script>
       <script src="js/syntax-highlighter.js"></script>
       <script src="js/jsplumbtoolkit-angular-1.x.js"></script>
       <script src="app.js"></script>
